database connection refactor